# books-catalogue-api

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
book_service/: Dockerfile  playground.http
book_service/app/: auth.py  config.py  database.py  dependencies.py  main.py  models.py  repository.py  repository_db.py  security.py
book_service/contracts/: openapi.json
book_service/scripts/: seed_books.py
book_service/tests/: conftest.py  test_books.py  test_refresh.py
book_service/worker/: main.py  tasks.py
docs/: EX3-notes.md
docs/runbooks/: compose.md
interface/: Dockerfile  cli.py  client.py  test_cli.py  token_store.py
migrations/: env.py
migrations/versions/: e06320fc2b30_create_books.py
scripts/: db.py  demo.sh  export_openapi.py  refresh.py  seed_books.py
